--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -30,6 +30,7 @@
         <link rel="stylesheet" type="text/css" href="{% cacheBuster '/assets/css/search-bar.css' %}" />
 
         {# Algolia search assets #}
+        <meta name="algolia-site-verification"  content="BCF0C2104AD592F3" />
         <script defer src="https://cdn.freecodecamp.org/news-assets/algolia/algoliasearch-3-33-0/algoliasearch.min.js"></script>
         <script defer src="https://cdn.freecodecamp.org/news-assets/algolia/autocomplete-0-36-0/autocomplete.min.js"></script>
 
